--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <img src="https://res.cloudinary.com/dafwtuvrd/image/upload/v1766646173/d9e34983-e718-4f50-9fb4-398feb05a545_nu3mtd.jpg" alt="image not found" class="imageclass">
         <div class="insidepart">
           <h3>CHARANJEET SINGH SIDHU</h3>
-          <h6>SOFTWARE ENGINEER</h6>
+          <h6>SOFTWARE ENGINEER , FREELANCER</h6>
         </div>
       </div>
       <div class="middlepart">
