--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         <img src="https://res.cloudinary.com/dafwtuvrd/image/upload/v1766664877/181775638_pklsoc.jpg" alt="image not found" class="imageclass">
         <div class="insidepart">
           <h3>SHUBHAM SINGH RAWAT</h3>
-          <h6>B.TECH STUDENT</h6>
+          <h6>B.TECH STUDENT , LEARNER</h6>
         </div>
       </div>
     </div>
