--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
       </div>
 
       <div class="footer-left">
-        <p>Developed with <span class="heart">❤️</span>by<b>ThemeWageon</b></p>
+        <p>Developed with <span class="heart">❤️</span>by<b>Karan Joshi</b></p>
       </div>
     </footer>  
   </body>
